deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amgi
  labels:
    app: amgi
spec:
  type: ClusterIP
  selector:
    app: amgi
  ports:
    - name: webhook
      port: 8080
      targetPort: webhook
      protocol: TCP
